[package]
name = "rust_module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_module"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
rumqttc = "0.20.0"
