[package]
name = "canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ic-agent = "0.31.0"
ic-types = "0.7.0"
candid = "0.10.1"
serde = "^1.0"
tokio = { version = "1.35.1", features = ["full"] }