[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "rust_module"

[project]
name = "string_sum"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


